Fix font-size intro on mobile devices

--- a/css/style.scss
+++ b/css/style.scss
@@ -548,6 +548,11 @@ blockquote {
   #intro {
     padding-bottom: 1.5rem;
   }
+
+  #intro .intro-text-header {
+    font-size: 3rem;
+    line-height: 3rem;
+  }
   
   .content-container {
     padding-left: 3.25rem;
